# EducationalProjects--DataStructures-libraries

01-Array-Satck-Queue-Deque/Release03/src/: AbstractDS.h  Array.h  Deque.cpp  Queue.cpp  Queue.h  Stack.h
01-Array-Satck-Queue-Deque/Release03/tests/: ArrayTest.cpp  CMakeLists.txt  DequeTest.cpp  QueueTest.cpp
02-LinkedList-Stack_LL-Queue_LL-Deque_LL/Release01/: Procedural_programming.cpp
02-LinkedList-Stack_LL-Queue_LL-Deque_LL/Release02/LinearDS/headers/: Deque.h  Queue.h  Stack.h
02-LinkedList-Stack_LL-Queue_LL-Deque_LL/Release02/LinearDS/src/: Deque.cpp
02-LinkedList-Stack_LL-Queue_LL-Deque_LL/Release02/List/headers/: ForwardList.h
02-LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/LinearDS/headers/: Queue.h  Stack.h
02-LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/List/: list_main.cpp
02-LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/List/headers/: ForwardList.h
02-LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/tests/: CMakeLists.txt  test_circular_list.cpp  test_deque.cpp  test_queue.cpp
03-BST, AVL, RedBlack, Splay trees/Release01-procedural programming/: AVL.cpp  BST.cpp  DS.h  RedBlack.cpp  Splay.cpp  main.cpp
1st project (Array, Satck array bases, queue array based, deque array based)/Release 01/: 010- Tasks-Basic.md  021- Implementation-optimized.cpp  Implementation.cpp  tasks.md
1st project (Array, Satck array bases, queue array based, deque array based)/Release 02/: OOP_based_implementation.cpp
Array, Satck array based, queue array based, deque array based)/Release 01/: 020- Tasks-optimized.md
Array, Satck, Queue, Deque/Release 01/: 021- Implementation-optimized.cpp
Array, Satck, Queue, Deque/Release 02/: OOP_based_implementation.cpp
Array, Satck, Queue, Deque/Release 03/: Readme.md
Array-Satck-Queue-Deque/Release01/: 011- Implementation-Basic.cpp  021- Implementation-optimized.cpp
Array-Satck-Queue-Deque/Release02/: OOP_based_implementation.cpp
Array-Satck-Queue-Deque/Release03/: CMakeLists.txt
Array-Satck-Queue-Deque/Release03/src/: Array.cpp  Array.h  CMakeLists.txt  Deque.cpp  Deque.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h  main.cpp
Array-Satck-Queue-Deque/Release03/tests/: ArrayTest.cpp  CMakeLists.txt  StackTest.cpp
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release02/LinearDS/headers/: IDataStructure.h
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release02/LinearDS/src/: Queue.cpp
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release02/List/: CircularList.cpp  CircularList.h  DoublyList.cpp  DoublyList.h  ForwardList.cpp  ForwardList.h  IList.h  list_main.cpp
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release02/List/headers/: CircularList.h
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/: CMakeLists.txt  main.cpp
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/LinearDS/: CMakeLists.txt
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/LinearDS/headers/: Deque.h  Stack.h
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/LinearDS/src/: Deque.cpp  Queue.cpp  Stack.cpp
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/List/: CMakeLists.txt
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/List/headers/: CircularList.h  DoublyList.h  IList.h
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/List/src/: CircularList.cpp  DoublyList.cpp  ForwardList.cpp
LinkedList-Stack_LL-Queue_LL-Deque_LL/Release03/tests/: test_doubly_list.cpp  test_forward_list.cpp  test_stack.cpp
